# rice-python-sdk

./: .gitignore  README.md  pyproject.toml
examples/: basic_state.py  basic_storage.py  basic_usage.py  cognitive_agent_app.py  full_app.py  genai_agent_app.py  my_agent_app.py  state_app.py  storage_app.py  tool_test_app.py
protos/: ricedb.proto  state.proto
rice_sdk/: __init__.py  client.py  config.py
rice_sdk/state/: __init__.py  client.py
rice_sdk/state/proto/: state_pb2.py  state_pb2_grpc.py
rice_sdk/storage/: __init__.py  client.py  client_grpc.py  client_http.py  utils.py
rice_sdk/storage/proto/: ricedb_pb2.py  ricedb_pb2_grpc.py
rice_sdk/tools/: anthropic.py  execute.py  google.py  openai.py
scripts/: generate_protos.py
tests/: test_client.py  test_config.py  test_state.py  test_storage_grpc.py  test_storage_http.py  test_tools.py
